@@ -17,7 +17,6 @@
 	<TD>Cell 2,1</TD>
 	<TD>Cell 2,2</TD>
 </TR>
-<!-- NEW PAGE -->
 <TR BGCOLOR="blue">
 	<TD>Cell 3,1</TD>
 	<TD>Cell 3,2</TD>
